apps/base/pds/resources/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ip-allowlist
  namespace: pds
spec:
  ipAllowList:
    sourceRange:
      - ***REMOVED***
      - ***REMOVED***
      - ***REMOVED***
      - ***REMOVED***
      - ***REMOVED***
      - ***REMOVED***
      - ***REMOVED***
      - ***REMOVED***
      - ***REMOVED***
      - ***REMOVED***
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
  namespace: pds
spec:
  headers:
    customResponseHeaders:
      Permissions-Policy: geolocation=(), microphone=(), camera=()
      Referrer-Policy: strict-origin-when-cross-origin
      Strict-Transport-Security: max-age=31536000
      X-Content-Type-Options: nosniff
      X-Frame-Options: DENY
      X-Robots-Tag: noindex, nofollow
      X-XSS-Protection: 1; mode=block
