apps/base/pds/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    secret.reloader.stakater.com/reload: pds-env
  labels:
    app.kubernetes.io/component: pds
    app.kubernetes.io/instance: pds
    app.kubernetes.io/name: pds
  name: pds
  namespace: pds
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: pds
      app.kubernetes.io/instance: pds
      app.kubernetes.io/name: pds
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: pds
      labels:
        app.kubernetes.io/component: pds
        app.kubernetes.io/instance: pds
        app.kubernetes.io/name: pds
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: pds-env
            - secretRef:
                name: pds-env
          image: ghcr.io/bluesky-social/pds:0.4.208
          imagePullPolicy: IfNotPresent
          # livenessProbe:
          #   failureThreshold: 3
          #   httpGet:
          #     path: /alive
          #     port: http
          #     scheme: HTTP
          #   periodSeconds: 10
          #   successThreshold: 1
          #   timeoutSeconds: 1
          name: pds
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          # readinessProbe:
          #   failureThreshold: 3
          #   httpGet:
          #     path: /alive
          #     port: http
          #     scheme: HTTP
          #   periodSeconds: 10
          #   successThreshold: 1
          #   timeoutSeconds: 1
          resources: {} # TODO
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          volumeMounts:
            - mountPath: /pds
              name: data
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pds-data
