apps/base/pds/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: pds
    app.kubernetes.io/instance: pds
    app.kubernetes.io/name: pds
  name: pds
  namespace: pds
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/component: pds
    app.kubernetes.io/instance: pds
    app.kubernetes.io/name: pds
  type: ClusterIP
