apps/base/pds/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: pds
    app.kubernetes.io/name: pds
  name: pds
  namespace: pds
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`pds.example.com`) || HostRegexp(`.+\.pds\.example\.com`)
      middlewares:
        # - name: ip-allowlist
        - name: security-headers
      services:
        - name: pds
          port: 80
  tls:
    certResolver: letsencrypt
